@@ -1225,7 +1225,8 @@ static int _job_test_topo(struct job_record *job_ptr, bitstr_t *bitmap,
 			best_fit_inx = j;
 	}
 	if (best_fit_inx == -1) {
-		error("job %u: best_fit topology failure", job_ptr->job_id);
+		debug("_job_test_topo: could not find resources for job %u",
+		      job_ptr->job_id);
 		rc = EINVAL;
 		goto fini;
 	}
